feat: Separate headers and style implementations

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,27 +1,10 @@
 @use "sass:map";
-
-$colors: (
-    "primary": #b92f2f,
-    "info": #1894d2,
-    "success": #3CA100,
-    "warning": #F3D24A,
-    "danger": #ff7b02,
-    "dark": #202020,
-    "shade": #404040,
-    "light": #d0d0d0,
-    "white": #ffffff
-);
-
-$palette: ();
+@use "colors-h" as *;
 
 :root {
   @each $color-name, $color-value in $colors {
     --color-#{$color-name}: #{$color-value};
   }
-}
-
-@each $color-name, $color-value in $colors {
-  $palette: map.set($palette, $color-name, var(--color-#{$color-name}));
 }
 
 @each $color-name, $color-value in $palette {
@@ -42,10 +25,6 @@ $palette: ();
   .text-color-#{$color-name} {
     color: $color-value;
   }
-}
-
-@function color($color-name) {
-  @return #{map.get($palette, $color-name)};
 }
 
 // ========================================== Theme ==========================================
