--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,15 +1,4 @@
-@use "colors" as *;
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
-
-:root {
-    --font-family-normal: "Poppins", sans-serif; 
-    --font-family-monospace: 'JetBrains Mono', monospace;
-    --font-size: 1.2rem;
-    
-    --heading-color: var(--color-primary);
-}
+@use "typography-h" as *;
 
 body {
     font-family: var(--font-family-normal);
