--- a/scss/_sizes-h.scss
+++ b/scss/_sizes-h.scss
@@ -5,10 +5,21 @@ $spacer: 1rem !default;
 $border-width: 2px !default;
 
 $sizer-percentages: (
-        25: 25%,
-        33: 33.33%,
-        50: 50%,
-        66: 66.66%,
-        75: 75%,
-        100: 100%,
+    25: 25%,
+    33: 33.33%,
+    50: 50%,
+    66: 66.66%,
+    75: 75%,
+    100: 100%,
+);
+
+$spaces: (
+    1: $spacer,
+    2: $spacer * 2,
+    3: $spacer * 3,
+    4: $spacer * 4,
+    5: $spacer * 5,
+    6: $spacer * 6,
+    7: $spacer * 7,
+    8: $spacer * 8
 );
