--- a/scss/_sizes.scss
+++ b/scss/_sizes.scss
@@ -25,3 +25,45 @@
         }
     }
 }
+
+// ==============================================
+// Margins, Paddings
+// ----------------------------------------------
+
+// There are definitely more condensed approaches to this, but I find this manual way much more readable
+@each $sp-name, $sp-value in $spaces {
+    
+    // Padding
+    .p-#{$sp-name} {
+        padding: $sp-value;
+    }
+    .pl-#{$sp-name} {
+        padding-left: $sp-value;
+    }
+    .pr-#{$sp-name} {
+        padding-right: $sp-value;
+    }
+    .pt-#{$sp-name} {
+        padding-top: $sp-value;
+    }
+    .pb-#{$sp-name} {
+        padding-bottom: $sp-value;
+    }
+    
+    // Margins
+    .m-#{$sp-name} {
+        margin: $sp-value;
+    }
+    .ml-#{$sp-name} {
+        margin-left: $sp-value;
+    }
+    .mr-#{$sp-name} {
+        margin-right: $sp-value;
+    }
+    .mt-#{$sp-name} {
+        margin-top: $sp-value;
+    }
+    .mb-#{$sp-name} {
+        margin-bottom: $sp-value;
+    }
+}
