--- a/scss/_typography-h.scss
+++ b/scss/_typography-h.scss
@@ -9,5 +9,7 @@
   --font-family-monospace: 'JetBrains Mono', monospace;
   --font-size: 1.2rem;
 
-  --heading-color: var(--color-primary);
+  --heading-color: var(--color-main);
+  
+  --paragraph-width: 70ch;
 }
