--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -7,8 +7,8 @@ body {
 }
 
 ::selection {
-    color: var(--color-background);
-    background-color: var(--color-primary);
+    color: var(--scheme-background);
+    background-color: var(--color-main);
 }
 
 a,
