--- a/scss/elements/_input-text.scss
+++ b/scss/elements/_input-text.scss
@@ -7,8 +7,8 @@ input[type=text] {
     display: block;
     width: 100%;
     padding: $spacer / 2;
-    background-color: var(--color-background);
-    color: var(--color-foreground);
+    background-color: var(--scheme-background);
+    color: var(--scheme-foreground);
     
     font-size: var(--font-size);
     
