--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,6 +1,7 @@
 @use "typography-h" as *;
+@use "sizes-h" as *;
 
-body {
+body, *, html, *::before, *::after {
     font-family: var(--font-family-normal);
     font-size: var(--font-size);
     line-height: 1.2;
@@ -11,8 +12,7 @@ body {
     background-color: var(--color-main);
 }
 
-a,
-a:visited {
+a {
     color: var(--heading-color);
 }
 
@@ -20,26 +20,36 @@ h1 {
     color: var(--heading-color);
     font-size: calc(var(--font-size) * 2.4);
     font-weight: bold;
+    
+    margin-top: $spacer * 1.75;
 }
 h2 {
     color: var(--heading-color);
     font-size: calc(var(--font-size) * 2);
     font-weight: bold;
+
+    margin-top: $spacer * 1.75;
 }
 h3 {
     color: var(--heading-color);
     font-size: calc(var(--font-size) * 1.75);
     font-weight: bold;
+
+    margin-top: $spacer * 1.75;
 }
 h4 {
     color: var(--heading-color);
     font-size: calc(var(--font-size) * 1.5);
     font-weight: bold;
+
+    margin-top: $spacer * 1.75;
 }
 h5 {
     color: var(--heading-color);
     font-size: calc(var(--font-size) * 1.3);
     font-weight: bold;
+
+    margin-top: $spacer * 1.75;
 }
 h6 {
     color: var(--heading-color);
@@ -47,4 +57,19 @@ h6 {
     font-weight: bold;
 }
 
+p {
+    max-width: var(--paragraph-width);
+    margin-bottom: $spacer;
+}
 
+.text-left {
+    text-align: left;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-right {
+    text-align: right;
+}
