--- a/EntropyWebsite/Pages/Shared/_Layout.cshtml
+++ b/EntropyWebsite/Pages/Shared/_Layout.cshtml
@@ -5,54 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Chaos Initiative - @ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/entropy.css"/>
+    
+    <script src="https://kit.fontawesome.com/3c465cbf36.js" crossorigin="anonymous"></script>
 </head>
-<body>
-<div class="d-flex flex-column h-100">
-    
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">
-                    <img src="https://chaosinitiative.com/img/chaos_logo_square.png" alt="chaos logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    
-    <div class="flex-grow-1">
-        
-        <div class="d-flex flex-column h-100">
-            
-        
-            <div class="flex-grow-1 container">
-                <main role="main" class="pb-3">
-                    @RenderBody()
-                </main>
-            </div>
-        
-            <footer class="border-top footer text-muted p-3">
-                <div class="container text-center">
-                    Stefan Heinz &copy; 2021
-                </div>
-            </footer>
-            
-        </div>
-        
-    </div>
-    
+<body class="theme-system">
 
-    
+<ul class="dropdown">
+    <li>
+        <i class="fas fa-moon"></i> Dark
+    </li>
+    <li>
+        <i class="fas fa-sun"></i> Light
+    </li>
+    <li>
+        <i class="fas fa-adjust"></i> System
+    </li>
+</ul>
+
+<div class="flex-grow-1 container">
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.4.0/highlight.min.js"></script>
