feat: Add dropdown

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @use "elements/buttons";
 @use "elements/input-text";
 @use "elements/container";
+@use "elements/dropdown";
 
 @use "grid";
 @use "sizes";
