--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 
 @use "elements/code";
 @use "elements/buttons";
+@use "elements/input-radio";
 @use "elements/input-text";
 @use "elements/container";
 
