feat: Small tweaks to a lot of stuff

--- a/EntropyWebsite/Pages/Buttons.cshtml
+++ b/EntropyWebsite/Pages/Buttons.cshtml
@@ -54,55 +54,35 @@ Buttons come in many shapes. All you need to do is add a class.
 
 <div class="row">
     <div class="col-md">
-        
-    </div>
-    <div class="col-md-3">
-        <h5>Normal</h5>
-    </div>
-    <div class="col-md-3">
-        <h5>Outline</h5>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-1">
-        
-    </div>
-    <div class="col-md-3">
         <button class="btn">Normal</button>
         <button class="btn btn-main">Normal</button>
         <button class="btn btn-accent">Normal</button>
     </div>
-    <div class="col-md-3">
+    <div class="col-md">
         <button class="btn btn-outline">Outline</button>
         <button class="btn btn-main btn-outline">Outline</button>
         <button class="btn btn-accent btn-outline">Outline</button>
     </div>
 </div>
 <div class="row">
-    <div class="col-md-1">
-        <h5 class="m-0">Popout</h5>
-    </div>
-    <div class="col-md-3">
+    <div class="col-md">
         <button class="btn btn-popout">Popout</button>
         <button class="btn btn-main btn-popout">Popout</button>
         <button class="btn btn-accent btn-popout">Popout</button>
     </div>
-    <div class="col-md-3">
+    <div class="col-md">
         <button class="btn btn-outline btn-popout">Outline + Popout</button>
         <button class="btn btn-main btn-outline btn-popout">Outline + Popout</button>
         <button class="btn btn-accent btn-outline btn-popout">Outline + Popout</button>
     </div>
 </div>
 <div class="row">
-    <div class="col-md-1">
-        <h5 class="m-0">Shadow</h5>
-    </div>
-    <div class="col-md-3">
+    <div class="col-md">
         <button class="btn btn-shadow">Shadow</button>
         <button class="btn btn-main btn-shadow">Shadow</button>
         <button class="btn btn-accent btn-shadow">Shadow</button>
     </div>
-    <div class="col-md-3">
+    <div class="col-md">
         <button class="btn btn-outline btn-shadow">Outline + Shadow</button>
         <button class="btn btn-main btn-outline btn-shadow">Outline + Shadow</button>
         <button class="btn btn-accent btn-outline btn-shadow">Outline + Shadow</button>
