--- a/scss/_sizes-h.scss
+++ b/scss/_sizes-h.scss
@@ -1,8 +1,10 @@
 
 // Header for sizing
 
-$spacer: 1rem !default;
-$border-width: 2px !default;
+:root {
+    --spacer: 1rem;
+    --border-width: 2px;
+}
 
 $sizer-percentages: (
     25: 25%,
@@ -16,12 +18,13 @@ $sizer-percentages: (
 $spaces: (
     0: 0,
     auto: auto,
-    1: $spacer,
-    2: $spacer * 2,
-    3: $spacer * 3,
-    4: $spacer * 4,
-    5: $spacer * 5,
-    6: $spacer * 6,
-    7: $spacer * 7,
-    8: $spacer * 8
+    1: var(--spacer),
+    2: calc(var(--spacer) * 2),
+    3: calc(var(--spacer) * 3),
+    4: calc(var(--spacer) * 4),
+    5: calc(var(--spacer) * 5),
+    6: calc(var(--spacer) * 6),
+    7: calc(var(--spacer) * 7),
+    8: calc(var(--spacer) * 8),
+    9: calc(var(--spacer) * 9)
 );
