--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -16,50 +16,33 @@ a {
     color: var(--heading-color);
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
     color: var(--heading-color);
-    font-size: calc(var(--font-size) * 2.4);
     font-weight: bold;
-    
-    margin-top: $spacer * 1.75;
+}
+
+h1 {
+    font-size: calc(var(--font-size) * 2.4);
 }
 h2 {
-    color: var(--heading-color);
     font-size: calc(var(--font-size) * 2);
-    font-weight: bold;
-
-    margin-top: $spacer * 1.75;
 }
 h3 {
-    color: var(--heading-color);
     font-size: calc(var(--font-size) * 1.75);
-    font-weight: bold;
-
-    margin-top: $spacer * 1.75;
 }
 h4 {
-    color: var(--heading-color);
     font-size: calc(var(--font-size) * 1.5);
-    font-weight: bold;
-
-    margin-top: $spacer * 1.75;
 }
 h5 {
-    color: var(--heading-color);
     font-size: calc(var(--font-size) * 1.3);
-    font-weight: bold;
-
-    margin-top: $spacer * 1.75;
 }
 h6 {
-    color: var(--heading-color);
     font-size: var(--font-size);
-    font-weight: bold;
 }
 
 p {
     max-width: var(--paragraph-width);
-    margin-bottom: $spacer;
+    margin-bottom: var(--spacer);
 }
 
 .text-left {
