--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @use "elements/buttons";
 @use "elements/input-radio";
 @use "elements/input-text";
+@use "elements/input-check";
 @use "elements/container";
 
 @use "grid";
