--- a/scss/_sizes-h.scss
+++ b/scss/_sizes-h.scss
@@ -16,15 +16,19 @@ $sizer-percentages: (
 );
 
 $spaces: (
-    0: 0,
     auto: auto,
-    1: var(--spacer),
-    2: calc(var(--spacer) * 2),
-    3: calc(var(--spacer) * 3),
-    4: calc(var(--spacer) * 4),
-    5: calc(var(--spacer) * 5),
-    6: calc(var(--spacer) * 6),
-    7: calc(var(--spacer) * 7),
-    8: calc(var(--spacer) * 8),
-    9: calc(var(--spacer) * 9)
+    "0": 0,
+    "025": calc(var(--spacer) * 0.25),
+    "03": calc(var(--spacer) / 3),
+    "05": calc(var(--spacer) * 0.5),
+    "075": calc(var(--spacer) * 0.75),
+    "1": var(--spacer),
+    "2": calc(var(--spacer) * 2),
+    "3": calc(var(--spacer) * 3),
+    "4": calc(var(--spacer) * 4),
+    "5": calc(var(--spacer) * 5),
+    "6": calc(var(--spacer) * 6),
+    "7": calc(var(--spacer) * 7),
+    "8": calc(var(--spacer) * 8),
+    "9": calc(var(--spacer) * 9)
 );
